--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "single-spa-transition",
+  "name": "@tgyou/single-spa-transition",
   "version": "1.0.0",
   "description": "App transition for single-spa root-config",
   "author": {
@@ -11,7 +11,6 @@
     "url": "https://github.com/tgyou/single-spa-transition"
   },
   "license": "MIT",
-  "main": "dist/styx-single-spa-transition.js",
   "types": "dist/styx-single-spa-transition.d.ts",
   "scripts": {
     "start": "webpack serve",
