--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,12 @@
 {
-  "extends": [
-    "ts-important-stuff",
-    "plugin:prettier/recommended"
-  ],
-  "parser": "@babel/eslint-parser"
+  "extends": ["ts-important-stuff", "plugin:prettier/recommended"],
+  "parser": "@babel/eslint-parser",
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": ["error"],
+    "linebreak-style": ["error", "unix"],
+    "prefer-const": "error",
+    "no-var": "error",
+    "no-console": "warn"
+  }
 }
