--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,7 @@
   "compilerOptions": {
     "declarationDir": "dist",
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ]
+    "lib": ["dom", "dom.iterable", "esnext"]
   },
   "include": ["src/**/*"],
   "exclude": ["src/**/*.test*"]
