--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/tgyou/single-spa-transition"
   },
   "license": "MIT",
+  "main": "dist/styx-single-spa-transition.js",
   "types": "dist/styx-single-spa-transition.d.ts",
   "scripts": {
     "start": "webpack serve",
@@ -32,28 +33,28 @@
     "@babel/eslint-parser": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.3",
     "babel-jest": "^27.0.6",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-ts-important-stuff": "^1.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "jest-cli": "^27.0.6",
-    "prettier": "^2.3.2",
+    "prettier": "^2.7.1",
     "pretty-quick": "^3.1.1",
-    "webpack": "^5.51.1",
-    "webpack-merge": "^5.8.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "@babel/preset-typescript": "^7.15.0",
-    "eslint-config-ts-important-stuff": "^1.1.0",
+    "ts-config-single-spa": "^3.0.0",
     "typescript": "^4.3.5",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
     "webpack-config-single-spa-ts": "^4.0.0",
-    "ts-config-single-spa": "^3.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@types/jest": "^27.0.1",
