--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest-cli": "^27.0.6",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.1",
+    "raw-loader": "^4.0.2",
     "ts-config-single-spa": "^3.0.0",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
