--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "ts-config-single-spa",
   "files": ["src/single-spa-transition.ts"],
   "compilerOptions": {
-    "declarationDir": "dist",
+    "declarationDir": "types",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"]
   },
